--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -8,6 +8,9 @@ check_for_updates: true
 trailing_whitespace:
   ignores_empty_lines: true
 
+disabled_rules:
+  - trailing_comma
+
 custom_rules:
   no_todo:
     name: "No TODOs"
